契約管理IF対応
