# src/provider/provenance-management/swagger_server/controllers/voucher_sent_controller.py
@@ -29,27 +29,28 @@ def voucher_sent(provider_id=None, consumer_id=None, contract_id=None, hash_get_
     :type hash_get_data: str
     :param contract_management_service_url: 契約管理サービスURL
     :type contract_management_service_url: str
+    :param contract_management_service_key: 契約管理サービスキー
+    :type contract_management_service_key: str
 
     :rtype: None
     """
 
-    # 引数のx-cadde-provider、x-cadde-consumer、x-cadde-contract-id、x-hash-get-data、x-cadde-contract-management-urlは
+    # 引数のx-cadde-provider、x-cadde-consumer、x-cadde-contract-id、x-hash-get-data、x-cadde-contract-management-url、x-cadde-contract-management-keyは
     # connexionの仕様上取得できないため、ヘッダから各パラメータを取得し、利用する。
     # 引数の値は利用しない。
 
     # TODO 契約管理サービスのIF仕様に応じて変更予定
     provider_id = connexion.request.headers['x-cadde-provider']
-    # provider_connector_id = connexion.request.headers['x-cadde-provider-connector-id'],
     consumer_id = connexion.request.headers['x-cadde-consumer']
-    # consumer_connector_id = connexion.request.headers['x-cadde-consumer-connector-id'],
     contract_id = connexion.request.headers['x-cadde-contract-id']
     hash_get_data = connexion.request.headers['x-hash-get-data']
     contract_management_service_url = connexion.request.headers['x-cadde-contract-management-url']
+    contract_management_service_key = connexion.request.headers['x-cadde-contract-management-key']
 
     logger.debug(
         get_message(
             '09004N', [
-                provider_id, consumer_id, contract_id, hash_get_data, contract_management_service_url]))
+                provider_id, consumer_id, contract_id, hash_get_data, contract_management_service_url, contract_management_service_key]))
 
     voucher_result = voucher_sent_call(
         provider_id,
@@ -57,6 +58,7 @@ def voucher_sent(provider_id=None, consumer_id=None, contract_id=None, hash_get_
         contract_id,
         hash_get_data,
         contract_management_service_url,
+        contract_management_service_key,
         external_interface)
 
     response = Response(response='', status=200)
